changes to fix joins not working (bug #10848). New tests, as well as table->status being set in index_read_idx